# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: each_arg_meta.rs  lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
