[package]
name = "derive_debug"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.11"

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.1"

[dependencies.syn]
version = "1.0.3"
features = ["extra-traits"]